tests/tooling/fixtures/native/recovery/positive/compound_assignment_for_step.objc3
module CompoundAssignmentForStep;

fn main() -> i32 {
  let sum = 0;
  for (let i = 0; i < 5; i += 1) {
    sum += i;
  }
  return sum;
}