tests/tooling/fixtures/native/recovery/negative/negative_for_condition_function_value.objc3
// Expected diagnostic code(s): O3S206.
module NegativeForConditionFunctionValue;

fn ready() -> bool {
  return true;
}

fn main() -> i32 {
  for (let i = 0; ready; i = i + 1) {
    let x = i;
  }
  return 0;
}

